--- a/inst/rmarkdown/templates/termpaper/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/termpaper/skeleton/skeleton.Rmd
@@ -10,16 +10,7 @@ bibliography: references.bib
 csl: unified-style-linguistics.csl 
 
 output:
-  TermpaperTemplate:: quarterly_report
-  bookdown::pdf_document2:
-    fig_caption: yes
-    latex_engine: xelatex
-    keep_tex: yes
-    toc: no
-    includes:
-      in_header: in_header.tex
-      before_body: before_body.tex
-      after_body: after_body.tex
+  TermpaperTemplate:: termpaper
       
 
 
