toc in skeleton

--- a/inst/rmarkdown/templates/termpaper/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/termpaper/skeleton/skeleton.Rmd
@@ -10,7 +10,8 @@ bibliography: references.bib
 csl: unified-style-linguistics.csl 
 
 output:
-  TermpaperTemplate:: termpaper
+  TermpaperTemplate:: termpaper:
+    toc = no
       
 
 
