--- a/Untitled/Untitled.Rmd
+++ b/Untitled/Untitled.Rmd
@@ -9,9 +9,7 @@ date: "March 2018"
 bibliography: references.bib
 csl: unified-style-linguistics.csl 
 
-output:
-  TermpaperTemplate::termpaper:
-    fig_caption: yes
+output: TermpaperTemplate::termpaper
       
 
 
