--- a/inst/rmarkdown/templates/termpaper/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/termpaper/skeleton/skeleton.Rmd
@@ -10,8 +10,8 @@ bibliography: references.bib
 csl: unified-style-linguistics.csl 
 
 output:
-  TermpaperTemplate:: termpaper:
-    fig_caption: TRUE
+  TermpaperTemplate::termpaper:
+    latex_engine: xelatex
       
 
 
